# dune-flake-template

./: README.md  dune-project  flake.nix  hello.opam  treefmt.toml
.github/workflows/: ci.yml
lib/: dune  hello.ml  hello.mli
test/: dune  test_hello.ml
